(Bug 5073) Don't use width:100% on #content
The #content element is nested and may have applied margins to it that
could cause scrollbars. So let's use nested-collapse instead of the
default.

--- a/htdocs/scss/schemes/tropo/_tropo-base.scss
+++ b/htdocs/scss/schemes/tropo/_tropo-base.scss
@@ -123,7 +123,7 @@ $header-height: 7em;
  */
 
 footer {
-    @include grid-row(false);
+    @include grid-row( nested-collapse );
     clear: both;
     padding: .45em 0 0 .63em;
     overflow: auto;
@@ -151,6 +151,6 @@ footer {
  */
 
 #content {
-    @include grid-row(false);
+    @include grid-row( nested-collapse );
     margin-bottom: 2.75em;
 }
